<resources>
    <string name="app_name">StraytoStay</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="encuentra_un_nuevo_amigo">Encuentra un nuevo amigo</string>
    <string name="iniciemos">Iniciemos</string>
    <string name="straytostay">StraytoStay</string>
    <string name="app_logo">StraytoStay</string>
    <string name="adopcion">Animales</string>
    <string name="seguimiento">Seguimiento</string>
    <string name="perfil">Perfil</string>
    <!-- Título del formulario -->
    <string name="agregar_animal">Agregar Animal</string>

    <!-- Campos del formulario -->
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="raza">Raza</string>
    <string name="tipo">Tipo</string>
    <string name="vacunas">Vacunas</string>
    <string name="esterilizacion">Esterilización</string>
    <string name="tamano">Tamaño</string>
    <string name="descripcion">Descripción</string>

    <!-- Botón -->
    <string name="agregar_imagen">+ Agregar imagen</string>

    <!-- Opciones para los spinners -->
    <string-array name="tipo_array">
        <item>Perro</item>
        <item>Gato</item>
        <item>Otro</item>
    </string-array>
    <!-- Encusta adoptante -->
    <!-- Pregunta 1 -->
    <string name="p1">¿Cómo te llamas?</string>

    <!-- Pregunta 2 -->
    <string name="p2">¿Cuántos años tienes?</string>
    <string name="r2_1">Menos de 18 años</string>
    <string name="r2_2">18 a 24 años</string>
    <string name="r2_3">25 a 40 años</string>
    <string name="r2_4">Mayores de 40 años o adulto mayor</string>

    <!-- Pregunta 3 -->
    <string name="p3">¿Tus padres/tutores están de acuerdo con la adopción y asumirán la responsabilidad del cuidado?</string>
    <string name="r3_1">Sí</string>
    <string name="r3_2">No</string>

    <!-- Pregunta 4 -->
    <string name="p4">¿Dónde vives actualmente?</string>
    <string name="r4_1">Con mis padres</string>
    <string name="r4_2">Solo/a</string>
    <string name="r4_3">Con roomies</string>

    <!-- Pregunta 5 -->
    <string name="p5">¿Tu contrato de arrendamiento permite mascotas?</string>
    <string name="r5_1">Sí</string>
    <string name="r5_2">No</string>

    <!-- Pregunta 6 -->
    <string name="p6">¿Cómo costearás los gastos de tu mascota (alimento, salud, emergencias)?</string>
    <string name="r6_1">Trabajo y tengo ingresos propios</string>
    <string name="r6_2">Mis padres me apoyarán</string>
    <string name="r6_3">Otro</string>

    <!-- Pregunta 7 -->
    <string name="p7">¿Con cuánto dinero te apoyarán tus padres?</string>
    <string name="r7_1">Menos de $50.000 COP mensuales</string>
    <string name="r7_2">Entre $50.000 - $100.000 COP</string>
    <string name="r7_3">Más de $100.000 COP</string>

    <!-- Pregunta 8 -->
    <string name="p8">¿Qué presupuesto posees mensual para tu peludito?</string>
    <string name="r8_1">Menos de $50.000 COP mensuales</string>
    <string name="r8_2">Entre $50.000 - $100.000 COP</string>
    <string name="r8_3">Más de $100.000 COP</string>

    <!-- Pregunta 9 -->
    <string name="p9">¿Cuál será tu forma de costear los gastos de la mascota?</string>
    <string name="r9_1">Dependeré de donaciones o ayudas externas (2)</string>
    <string name="r9_2">Ingreso variable pero puedo cubrir gastos básicos (5)</string>
    <string name="r9_3">No tengo cómo costearlo aún (0)</string>

    <!-- Pregunta 10 -->
    <string name="p10">¿Tus padres están de acuerdo con la adopción?</string>
    <string name="r10_1">Sí</string>
    <string name="r10_2">No</string>

    <!-- Pregunta 11 -->
    <string name="p11">¿Ellos ayudarán con los gastos y el cuidado del animal?</string>
    <string name="r11_1">Sí, ellos cubrirán todos los gastos</string>
    <string name="r11_2">Compartiremos los gastos</string>
    <string name="r11_3">No, yo asumiré toda la responsabilidad</string>

    <!-- Pregunta 12 -->
    <string name="p12">¿Tienen un presupuesto estimado para la mascota?</string>
    <string name="r12_1">Menos de $50.000 COP mensuales</string>
    <string name="r12_2">Entre $50.000 - $100.000 COP</string>
    <string name="r12_3">Más de $100.000 COP</string>

    <!-- Pregunta 13 -->
    <string name="p13">¿Son conscientes de que los gastos pueden aumentar debido a emergencias médicas o necesidades especiales del animal?</string>
    <string name="r13_1">Sí</string>
    <string name="r13_2">No</string>

    <!-- Pregunta 14 -->
    <string name="p14">¿Tus compañeros de casa están de acuerdo con la adopción?</string>
    <string name="r14_1">Sí</string>
    <string name="r14_2">No</string>

    <!-- Pregunta 15 -->
    <string name="p15">¿Están dispuestos a convivir con el animal sin problemas de convivencia?</string>
    <string name="r15_1">Sí</string>
    <string name="r15_2">No</string>

    <!-- Pregunta 16 -->
    <string name="p16">¿Tu contrato de arrendamiento permite mascotas?</string>
    <string name="r16_1">Sí</string>
    <string name="r16_2">No</string>

    <!-- Pregunta 17 -->
    <string name="p17">¿Vives solo, con pareja o con familia?</string>
    <string name="r17_1">Solo</string>
    <string name="r17_2">Con pareja</string>
    <string name="r17_3">Con familia</string>

    <!-- Pregunta 18 -->
    <string name="p18">¿Tu pareja está de acuerdo con la adopción?</string>
    <string name="r18_1">Sí</string>
    <string name="r18_2">No</string>

    <!-- Pregunta 19 -->
    <string name="p19">¿Todos en la familia están felices y de acuerdo con adoptar?</string>
    <string name="r19_1">Sí</string>
    <string name="r19_2">No</string>

    <!-- Pregunta 20 -->
    <string name="p20">¿Cuánto tiempo libre tienes al día para tu mascota?</string>
    <string name="r20_1">Menos de 2 horas</string>
    <string name="r20_2">Entre 2 y 4 horas</string>
    <string name="r20_3">Más de 4 horas</string>

    <!-- Pregunta 21 -->
    <string name="p21">¿Tienes ingresos suficientes para cubrir emergencias veterinarias?</string>
    <string name="r21_1">Sí</string>
    <string name="r21_2">No</string>

    <!-- Pregunta 22 -->
    <string name="p22">¿Tienes planes de mudanza en los próximos años?</string>
    <string name="r22_1">Sí</string>
    <string name="r22_2">No</string>

    <!-- Pregunta 23 -->
    <string name="p23">¿Qué harás con tu mascota en caso de mudarte?</string>
    <string name="r23_1">Me la llevo conmigo, buscaré un lugar pet-friendly (10)</string>
    <string name="r23_2">Depende del lugar, intentaré llevarla (6)</string>
    <string name="r23_3">La dejaré con familiares o amigos (4)</string>
    <string name="r23_4">No puedo llevarla, buscaré una nueva familia (0)</string>

    <!-- Pregunta 24 -->
    <string name="p24">¿Tienes alguna condición de salud que pueda afectar el cuidado de una mascota?</string>
    <string name="r24_1">Sí</string>
    <string name="r24_2">No</string>

    <!-- Pregunta 25 -->
    <string name="p25">¿Qué condiciones podrían afectar el cuidado de tu amiguito peludo?</string>
    <string name="r25_1">Tengo una condición que puede afectar en ciertos momentos, pero cuento con ayuda (6)</string>
    <string name="r25_2">Tengo una condición de salud que podría impedirme cuidar de una mascota sin ayuda constante(3)</string>
    <string name="r25_3">Tengo una condición grave y no cuento con red de apoyo para el cuidado (0)</string>
    <string name="r25_4">Tengo una condición leve, pero estoy en control médico y con apoyo familiar (8)</string>
    <!-- Pregunta 26 -->
    <string name="p26">Si en algún momento no puedes cuidar de tu mascota, ¿quién lo haría?</string>
    <string name="r26_1">Tengo un familiar/amigo de confianza</string>
    <string name="r26_2">No tengo a nadie</string>

    <!-- Pregunta 27 -->
    <string name="p27">¿Tienes suficiente espacio para la mascota que deseas adoptar?</string>
    <string name="r27_1">Sí</string>
    <string name="r27_2">No</string>

    <!-- Pregunta 28 -->
    <string name="p28">¿Hay otras mascotas en casa?</string>
    <string name="r28_1">Sí</string>
    <string name="r28_2">No</string>

    <!-- Pregunta 29 -->
    <string name="p29">Cuéntanos sobre los demás peluditos en tu hogar</string>

    <!-- Pregunta 30 -->
    <string name="p30">¿Podrías mostrarnos un video del espacio donde vivirá el peludito?</string>
    <string name="r30_1">Sí</string>
    <string name="r30_2">No</string>

    <!-- Pregunta 31 -->
    <string name="p31">¿Has tenido mascotas antes?</string>
    <string name="r31_1">Sí</string>
    <string name="r31_2">No, sería mi primera vez</string>
    <string name="r31_3">Tuve una, pero ya no está conmigo</string>

    <!-- Pregunta 32 -->
    <string name="p32">¿Podrías contarnos qué sucedió con tu anterior mascota?</string>
    <string name="r32_1">Falleció de forma natural o por edad avanzada y recibió atención (10)</string>
    <string name="r32_2">Falleció por enfermedad tratada con veterinario(8)</string>
    <string name="r32_3">La entregué en adopción por causas justificadas (6)</string>
    <string name="r32_4">Se escapó/ fue abandonada o murió por descuido (1)</string>
    <!-- Pregunta 33 -->
    <string name="p33">¿Estás dispuesto a hacerte cargo de los gastos de salud, alimentación y bienestar de la mascota?</string>
    <string name="r33_1">Sí</string>
    <string name="r33_2">No</string>

    <!-- Pregunta 34 -->
    <string name="p34">Si la mascota aún no está esterilizada, ¿asumirías los costos y trámites para hacerlo?</string>
    <string name="r34_1">Sí</string>
    <string name="r34_2">No</string>

    <!-- Pregunta 35 -->
    <string name="p35">¿Qué harías si tu mascota presenta problemas de comportamiento?</string>
    <string name="r35_1">Buscaría ayuda profesional</string>
    <string name="r35_2">Intentaría corregirlo por mi cuenta</string>
    <string name="r35_3">La devolvería al refugio</string>

    <!-- Pregunta 36 -->
    <string name="p36">Si por alguna razón ya no puedes tener a tu mascota, ¿qué harías?</string>
    <string name="r36_1">Buscaría una familia responsable</string>
    <string name="r36_2">La devolvería al refugio</string>

    <!-- Pregunta 37 -->
    <string name="p37">¿Te comprometes a enviarnos fotos y actualizaciones sobre tu mascota durante el primer año?</string>
    <string name="r37_1">Sí</string>
    <string name="r37_2">No</string>

    <!-- Pregunta 38 -->
    <string name="p38">¿Podemos hacer visitas o videollamadas para ver cómo está tu mascota?</string>
    <string name="r38_1">Sí</string>
    <string name="r38_2">No</string>

    <string name="admin_profile">Perfil del administrador</string>
    <string name="admin_list">Administradores</string>
    <string name="linked_entities">Entidades vinculadas</string>
    <string name="educational_content">Contenido educativo</string>


    <string-array name="esterilizacion_array">
        <item>Sí</item>
        <item>No</item>

    </string-array>
    <string-array name="tipos_recurso">
        <item>Video</item>
        <item>Revista</item>
        <item>Artículo</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>