<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#F0F0F0"> <!-- Fondo gris claro para contraste -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_margin="8dp"
        android:background="@android:color/white"
        android:elevation="4dp"
        android:clipToPadding="false"
        android:layout_marginBottom="32dp">

        <!-- Título -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregar_animal"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#0D47A1"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp" />

        <!-- Nombre -->

        <EditText
        android:id="@+id/inputNombre"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_input_rounded"
        android:hint="@string/nombre"
        android:inputType="text"
        android:padding="16dp" />

        <!-- Edad -->
        <EditText
            android:id="@+id/inputEdad"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edad"
            android:background="@drawable/bg_input_rounded"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:inputType="number" />
        <!-- Raza -->
        <EditText
            android:id="@+id/inputRaza"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/raza"
            android:background="@drawable/bg_input_rounded"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:inputType="text" />

        <!-- Tipo -->
        <Spinner
            android:id="@+id/spinnerTipo"
            android:layout_width="match_parent"

            android:layout_height="50dp"
            android:background="@drawable/bg_input_rounded"
            android:padding="8dp"
            android:layout_marginBottom="16dp" />

        <!-- Esterilización -->
        <Spinner
            android:id="@+id/spinnerEsterilizacion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input_rounded"
            android:padding="8dp"
            android:layout_marginBottom="16dp" />

        <!-- Sexo -->
        <Spinner
            android:id="@+id/spinnerSexo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input_rounded"
            android:padding="8dp"
            android:layout_marginBottom="16dp" />

        <!-- Vacunas -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vacunas"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:id="@+id/vacunaContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <EditText
                    android:id="@+id/animal_vacuna"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="   Ingrese las vacunas"
                    android:drawableLeft="@drawable/ic_clinic"
                    android:background="@drawable/edittext_background"
                    android:padding="12dp"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/addVacunaBtn" />

                <ImageButton
                    android:id="@+id/addVacunaBtn"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:padding="6dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_add_black_24" />
            </RelativeLayout>
        </LinearLayout>

        <!-- Tamaño -->
        <Spinner
            android:id="@+id/spinnerTamanoForm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input_rounded"
            android:padding="8dp"
            android:layout_marginBottom="16dp" />

        <!-- Descripción -->
        <EditText
            android:id="@+id/inputDescripcion"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/descripcion"
            android:gravity="top"
            android:background="@drawable/bg_input_rounded"
            android:padding="16dp"
            android:layout_marginBottom="24dp"
            android:inputType="textMultiLine" />
        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="24dp"
            android:scaleType="centerCrop"
            android:background="@drawable/bg_input_rounded"
            android:visibility="gone" />

        <!-- Botón Agregar Imagen -->
        <Button
            android:id="@+id/btnAgregarImagen"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/agregar_imagen"
            android:textColor="@android:color/white"
            android:backgroundTint="#FFA726"
            android:background="@drawable/rounded_button_orange"
            android:padding="16dp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/btnConfirmPublish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Confirmar publicacion"
            android:background="@drawable/bg_button_border_blue"
            android:padding="16dp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"/>

    </LinearLayout>
</ScrollView>
